--- a/thirdproject/templates/testApp/index.html
+++ b/thirdproject/templates/testApp/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html>
+{% load static %}
 <head>
     <title>Full Stack Web Development</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
+    {% if emp_list %}
+    <table>
+    {% for employee in emp_list %}
+    <tr>
+    <td>{{ employee.empNo }}</td>
+    <td>{{ employee.empName }}</td>
+    <td>{{ employee.empSalary }}</td>
+    <td>{{ employee.empAddress }}</td>
+    </tr>
+    {% endfor %}
+    {% endif %}
+
 
     <h1>Full stack web development</h1>
     <h2>HTML</h2>
-    {{display_date}}
+    
+<img src="{% static 'images/img.jpg' %}" alt="My img">
 
     <p>
         HTML stands for HyperText Markup Language. It is the standard language for creating web pages.
