--- a/crudDemo/templates/crudApp/index.html
+++ b/crudDemo/templates/crudApp/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
-{% load static %}
-<head>
-    <title>Full Stack Web Development</title>
-</head>
-<body>
+{% extends 'crudApp/base.html'%}
+{% block content %} 
 
-    <h1>Cookies Count is {{count}}</h1>
-</body>
+    <h1> Student Details</h1>
+    <table>
+        <thead>
+            <th> Student No</th>
+            <th> Student Name</th>
+            <th> Student Class</th>
+            <th> Student Address</th>
+        </thead> 
+        <tr>
+        {% for st in student%}
+            <td> {{st.sno}}</td>
+            <td> {{st.sname}}</td>
+            <td> {{st.sclass}}</td>
+            <td> {{st.saddress}}</td>
+        </tr>
+        {% endfor %}
+    </table>
+    <a href ='http://127.0.0.1:8000/create/'><button type ="button"> Add New Student </a>
+
+{% endblock %}    
+             
 </html>
