--- a/crudDemo/templates/crudApp/index.html
+++ b/crudDemo/templates/crudApp/index.html
@@ -17,7 +17,7 @@
             <td> {{st.sname}}</td>
             <td> {{st.sclass}}</td>
             <td> {{st.saddress}}</td>
-            <td><a href='#'> Update </a> <a href='/delete/{{st.id}}'> Delete </a> </td>
+            <td><a href='/update/{{st.id}}'> Update </a> <a href='/delete/{{st.id}}'> Delete </a> </td>
         </tr>
         {% endfor %}
     </table>
